--- a/index.html
+++ b/index.html
@@ -132,5 +132,10 @@
   </div>
 
   <script src="script.js"></script>
+  <!-- Firebase (compat - para usar firebase.auth(), firebase.firestore() no script abaixo) -->
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
+
 </body>
 </html>
