chore(api): add createPreference and axios dependency

--- a/index.html
+++ b/index.html
@@ -131,6 +131,17 @@
     </div>
   </div>
 
+
+  <!-- Lightbox (galeria de imagens) -->
+<div id="lightboxModal" class="lightbox" aria-hidden="true">
+  <div class="lb-content">
+    <button id="lbClose" class="lb-close">×</button>
+    <div id="lbThumbs" class="lb-thumbs"></div>
+    <div id="lbIndicator" class="lb-indicator"></div>
+  </div>
+</div>
+
+
   <script src="script.js"></script>
   <!-- Firebase (compat - para usar firebase.auth(), firebase.firestore() no script abaixo) -->
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
