chore(api): add createPreference and axios dependency

--- a/index.html
+++ b/index.html
@@ -121,26 +121,17 @@
   <div id="toast" class="toast" role="status" aria-live="polite"></div>
 
   <!-- Lightbox / Product Gallery Modal -->
-  <div id="lightboxModal" class="lightbox" aria-hidden="true">
-    <div class="lightbox-sheet" role="dialog" aria-modal="true" aria-label="Galeria de imagens do produto">
-      <button id="lbClose" class="lb-close" aria-label="Fechar galeria">✕</button>
-      <div class="lb-content">
-        <div id="lbThumbs" class="lb-thumbs" tabindex="0"></div>
-        <div class="lb-indicator" id="lbIndicator"></div>
-      </div>
-    </div>
-  </div>
-
-
-  <!-- Lightbox (galeria de imagens) -->
 <div id="lightboxModal" class="lightbox" aria-hidden="true">
   <div class="lb-content">
-    <button id="lbClose" class="lb-close">×</button>
+    <button id="lbClose" class="close-btn">×</button>
     <div id="lbThumbs" class="lb-thumbs"></div>
     <div id="lbIndicator" class="lb-indicator"></div>
   </div>
 </div>
 
+
+
+  
 
   <script src="script.js"></script>
   <!-- Firebase (compat - para usar firebase.auth(), firebase.firestore() no script abaixo) -->
